# mailer

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
mailer/: celery.py  settings.py  urls.py
notify/: admin.py  apps.py  routers.py  serializers.py  services.py  signals.py  tasks.py  utils.py  validators.py  views.py
notify/migrations/: 0001_initial.py  0002_auto_20220529_1906.py  0003_alter_notify_postpone_on.py  0004_oneoffperiodictask.py  0005_delete_oneoffperiodictask.py  0006_configuration.py  0007_auto_20220530_2048.py  0008_alter_notify_read_status.py
notify/models/: __init__.py  configuration.py  notify.py  receiver.py  template.py
notify/models/abstracts/: notify.py
notify/templates/notify/: index.html
user/: models.py
user/migrations/: 0001_initial.py
